Rename sosv.html to rtsosv.html. add error cb in rtsosv.html

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -64,7 +64,7 @@
 								<section>
                                                                     <div class="row">
                                                                             <div class="4u">
-                                                                                    <a href="sosv.html" class="image fit"><img src="images/alma-mater.jpg" alt=""></a>
+                                                                                    <a href="rtsosv.html" class="image fit"><img src="images/alma-mater.jpg" alt=""></a>
                                                                             </div>
                                                                             <div class="4u">
                                                                                     <a href="as.html" class="image fit"><img src="images/googlemap.jpg" alt=""></a>
