--- a/public_html/rtsosv.html
+++ b/public_html/rtsosv.html
@@ -121,6 +121,8 @@ THE SOFTWARE.
                             console.log('sound.lat '+sound.lat+', sound.lng '+sound.lng);
                         });
                     }
+                }, function(){
+                    console.log("No event found!");
                 });
             }
         </script>
