add word could concept art

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -64,13 +64,13 @@
 								<section>
                                                                     <div class="row">
                                                                             <div class="4u">
-                                                                                    <a href="rtsosv.html" class="image fit"><img src="images/alma-mater.jpg" alt=""></a>
+                                                                                    <a href="rtsosv.html" class="image fit"><img src="images/47063_l.jpg" alt=""></a>
                                                                             </div>
                                                                             <div class="4u">
                                                                                     <a href="as.html" class="image fit"><img src="images/googlemap.jpg" alt=""></a>
                                                                             </div>
                                                                             <div class="4u">
-                                                                                    <a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+                                                                                    <a href="#" class="image fit"><img src="images/wordle-word-cloud-applications.png" alt=""></a>
                                                                             </div>
                                                                     </div>
                                                                     <div class="row">
