remove artifical pop-up to ask for certificate acceptance

--- a/public_html/rtsosv.html
+++ b/public_html/rtsosv.html
@@ -36,7 +36,7 @@ THE SOFTWARE.
         <script src="js/illiad.min.js"></script>
 
         <script>
-            window.open("https://acoustic.ifp.illinois.edu:8081");
+            //window.open("https://acoustic.ifp.illinois.edu:8081");
 
             var lastTime = new Date().toISOString();
             var data = {
