--- a/public_html/as.html
+++ b/public_html/as.html
@@ -37,7 +37,7 @@ THE SOFTWARE.
         <script src="js/oms.min.js"></script>
 
         <script>
-            window.open("https://acoustic.ifp.illinois.edu:8081");
+            //window.open("https://acoustic.ifp.illinois.edu:8081");
             
             var map;
             var oms;
