--- a/public_html/index.html
+++ b/public_html/index.html
@@ -31,8 +31,8 @@
 					<nav id="nav">
 						<a href="#me" class="icon fa-home active"><span>Home</span></a>
 						<a href="#work" class="icon fa-folder"><span>Demo</span></a>
-						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
-						<a href="https://github.com/long0612/IlliadAccess" class="icon fa-github"><span>Github</span></a>
+						<a href="https://bitbucket.org/longle1/illiadclient" class="icon fa-bitbucket"><span>Android Client</span></a>
+						<a href="https://github.com/long0612/IlliadAccess" class="icon fa-github"><span>Service Accessor</span></a>
 					</nav>
 
 				<!-- Main -->
