--- a/public_html/index.html
+++ b/public_html/index.html
@@ -53,13 +53,12 @@
 						<!-- Work --> 
 							<article id="work" class="panel">
 								<header>
-									<h2>Webapps</h2>
+									<h2>WebApps</h2>
 								</header>
 								<p>
                                                                     The Illinois acoustic database (Illiad) service is an audio sensing 
                                                                     service that supports historical and/or realtime processing.
                                                                     The following web applications demonstrate the Illiad service.
-                                                                    (tested on Chrome)
 								</p>
 								<section>
                                                                     <div class="row">
