add descriptive texts in front of demo images

--- a/public_html/rtsosv.html
+++ b/public_html/rtsosv.html
@@ -24,7 +24,7 @@ THE SOFTWARE.
 -->
 <html>
     <head>
-        <title>RTSOSV</title>
+        <title>Realtime Sound on Street View</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
