--- a/public_html/as.html
+++ b/public_html/as.html
@@ -24,7 +24,7 @@ THE SOFTWARE.
 -->
 <html>
     <head>
-        <title>Google map app</title>
+        <title>Acoustic Search</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
