--- a/public_html/index.html
+++ b/public_html/index.html
@@ -21,6 +21,37 @@
 			<link rel="stylesheet" href="css/style-noscript.css" />
 		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+                
+                <style>
+                    .wrapper1 {
+                        position: relative;
+                        padding: 0;
+                        width:100%;
+                        display:block;
+                    }
+                    .text {
+                        position: absolute;
+                        top: 0;
+                        color: black;
+                        background-color:rgba(255,255,255,0.8);
+                        width: 100%;
+                        height: 100%;
+                        line-height: normal;
+                        text-align: center;
+                        z-index: 10;
+                        opacity: 0;
+                        -webkit-transition: all 0.5s ease;
+                        -moz-transition: all 0.5s ease;
+                        -o-transition: all 0.5s ease;
+                        transition: all 0.5s ease;
+                    }
+                    .text:hover {
+                        opacity:1;
+                    }
+                    img {
+                        z-index:1;
+                    }
+                </style>
 	</head>
 	<body>
 
@@ -63,13 +94,22 @@
 								<section>
                                                                     <div class="row">
                                                                             <div class="4u">
-                                                                                    <a href="rtsosv.html" class="image fit"><img src="images/47063_l.jpg" alt=""></a>
+                                                                                <a href="rtsosv.html" class="wrapper1">
+                                                                                    <span class="text">Realtime Sound on Street View</span>
+                                                                                    <img class="wrapper1" src="images/47063_l.jpg" alt="">
+                                                                                </a>
                                                                             </div>
                                                                             <div class="4u">
-                                                                                    <a href="as.html" class="image fit"><img src="images/googlemap.jpg" alt=""></a>
+                                                                                    <a href="as.html" class="wrapper1">
+                                                                                        <span class="text">Acoustic Search</span>
+                                                                                        <img class="wrapper1" src="images/googlemap.jpg" alt="">
+                                                                                    </a>
                                                                             </div>
                                                                             <div class="4u">
-                                                                                    <a href="#" class="image fit"><img src="images/wordle-word-cloud-applications.png" alt=""></a>
+                                                                                    <a href="wordcloud.html" class="wrapper1">
+                                                                                        <span class="text">Dynamic Word Cloud</span>
+                                                                                        <img class="wrapper1" src="images/wordle-word-cloud-applications.png" alt="">
+                                                                                    </a>
                                                                             </div>
                                                                     </div>
                                                                     <div class="row">
