reset lastTime upon reset for wordcloud and rtsosv

--- a/public_html/rtsosv.html
+++ b/public_html/rtsosv.html
@@ -92,6 +92,7 @@ THE SOFTWARE.
             });
             
             function reset(){
+                lastTime = new Date().toISOString();
                 clearInterval(timerId);
                 soundQueue = [];
                 playing = false;
