change init location to Berkeley

--- a/public_html/as.html
+++ b/public_html/as.html
@@ -58,8 +58,8 @@ THE SOFTWARE.
             
             function initialize(){
                 var mapProp = {
-                    center:new google.maps.LatLng(40.109789,-88.227261),
-                    zoom:15,
+                    center:new google.maps.LatLng(30.07913,-99.24414),
+                    zoom:5,
                     mapTypeId:google.maps.MapTypeId.ROADMAP
                 };
                 map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
@@ -225,7 +225,7 @@ THE SOFTWARE.
                 <fieldset>
                     <legend id="loc">Location</legend>
                     <label class="label1">Latitude</label> <input size="25" type="text" id="lat" value="40.1069855"/><br>
-                    <label class="label1">Longitude</label> <input size="25" type="text" id="lng" value="-88.2244681"/><br>
+                    <label class="label1">Longitude</label> <input size="25" type="text" id="lng" value="-88.227261"/><br>
                     <label class="label1">Radius (miles)</label> <input size="25" type="text" id="rad" value="1"/>
                 </fieldset>
             </form>
