lowercase hello world

--- a/public_html/wordcloud.html
+++ b/public_html/wordcloud.html
@@ -95,7 +95,7 @@ THE SOFTWARE.
                 gLoc = [$('#lat').val(), $('#lng').val()];
                 gRad = $('#rad').val();
 
-                wordVal = ["Hello", "World"];
+                wordVal = ["hello", "world"];
                 wordCnt = [1, 1];
                 WordCloud(document.getElementById('myCanvas'), { list: formList(wordVal, wordCnt) } );
             }
