cosmetic change to all demos and the main website

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -137,7 +137,7 @@
 								</section>
 							</article>
 
-						<!-- Contact -->
+						<!-- Contact 
 							<article id="contact" class="panel">
 								<header>
 									<h2>Contact Me</h2>
@@ -170,7 +170,7 @@
 									</div>
 								</form>
 							</article>
-
+                                                -->
 					</div>
 		
 				<!-- Footer -->
