add the soundheat demo

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -95,7 +95,7 @@
                                                                     <div class="row">
                                                                             <div class="4u">
                                                                                 <a href="rtsosv.html" class="wrapper1">
-                                                                                    <span class="text">Realtime Sound on Street View</span>
+                                                                                    <span class="text">Realtime Sound on Street View (Required the IlliadClient Android app)</span>
                                                                                     <img class="wrapper1" src="images/47063_l.jpg" alt="">
                                                                                 </a>
                                                                             </div>
@@ -107,14 +107,17 @@
                                                                             </div>
                                                                             <div class="4u">
                                                                                     <a href="wordcloud.html" class="wrapper1">
-                                                                                        <span class="text">Dynamic Word Cloud</span>
+                                                                                        <span class="text">Dynamic Word Cloud (Required the IlliadClient Android app)</span>
                                                                                         <img class="wrapper1" src="images/wordle-word-cloud-applications.png" alt="">
                                                                                     </a>
                                                                             </div>
                                                                     </div>
                                                                     <div class="row">
                                                                             <div class="4u">
-                                                                                    <a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
+                                                                                    <a href="soundheat.html" class="wrapper1">
+                                                                                        <span class="text">Sound Heatmap</span>
+                                                                                        <img class="wrapper1" src="images/soundheat.jpg" alt="">
+                                                                                    </a>
                                                                             </div>
                                                                             <div class="4u">
                                                                                     <a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
