change from http to https

--- a/public_html/soundheat.html
+++ b/public_html/soundheat.html
@@ -29,7 +29,7 @@ THE SOFTWARE.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <script
-            src="http://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true_or_false">
+            src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true_or_false">
         </script>
         <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
         
