--- a/public_html/as.html
+++ b/public_html/as.html
@@ -29,7 +29,7 @@ THE SOFTWARE.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <script
-            src="http://maps.googleapis.com/maps/api/js?key=AIzaSyD5NvcrQ54Rbzdxpo3FtJsAyvUjy6O3cn4&sensor=false">
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5NvcrQ54Rbzdxpo3FtJsAyvUjy6O3cn4&sensor=false">
         </script>
         <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
         <script src="js/illiad.min.js"></script>
