--- a/public_html/wordcloud.html
+++ b/public_html/wordcloud.html
@@ -31,7 +31,7 @@ THE SOFTWARE.
         <script src="js/wordcloud2.js"></script>
         <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
         <script 
-            src="http://maps.googleapis.com/maps/api/js?key=AIzaSyD5NvcrQ54Rbzdxpo3FtJsAyvUjy6O3cn4&sensor=false">
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5NvcrQ54Rbzdxpo3FtJsAyvUjy6O3cn4&sensor=false">
         </script>
                 
         <script>
