add base code for video search (vs.html). update illiad interface to have col and gridCol as arguments

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -102,7 +102,7 @@
                                                                             <div class="4u">
                                                                                     <a href="as.html" class="wrapper1">
                                                                                         <span class="text">Acoustic Search</span>
-                                                                                        <img class="wrapper1" src="images/googlemap.jpg" alt="">
+                                                                                        <img class="wrapper1" src="images/as.png" alt="">
                                                                                     </a>
                                                                             </div>
                                                                             <div class="4u">
@@ -120,7 +120,10 @@
                                                                                     </a>
                                                                             </div>
                                                                             <div class="4u">
-                                                                                    <a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
+                                                                                    <a href="vs.html" class="wrapper1">
+                                                                                        <span class="text">Video Search (Under construction)</span>
+                                                                                        <img class="wrapper1" src="images/vs.png" alt="">
+                                                                                    </a>
                                                                             </div>
                                                                             <div class="4u">
                                                                                     <a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
