--- a/public_html/as.html
+++ b/public_html/as.html
@@ -57,7 +57,7 @@ THE SOFTWARE.
                 
                 oms.addListener('click', function(marker) {
                     // Download sound data and play
-                    IllDownData('publicDb', 'publicUser', 'publicPwd', 'data', marker.filename, function(data){
+                    IllDownGrid('publicDb', 'publicUser', 'publicPwd', 'data', marker.filename, function(data){
                         audioCtx.decodeAudioData(data, function(buf){
                             var source = audioCtx.createBufferSource();
                             source.buffer = buf;
@@ -131,7 +131,7 @@ THE SOFTWARE.
                     q.kw = document.getElementById("kw").value;
                 }
                 
-                IllQueryEvent('publicDb', 'publicUser', 'publicPwd', 'event', q, function(events){
+                IllQueryCol('publicDb', 'publicUser', 'publicPwd', 'event', q, function(events){
                     events.sort(function(a, b) {
                         return a.logNoiseProb - b.logNoiseProb;
                     });
