add video search, modified from audio search+cached filesystem+html5 video (dynamic load)

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -121,7 +121,7 @@
                                                                             </div>
                                                                             <div class="4u">
                                                                                     <a href="vs.html" class="wrapper1">
-                                                                                        <span class="text">Video Search (Under construction)</span>
+                                                                                        <span class="text">Video Search</span>
                                                                                         <img class="wrapper1" src="images/vs.png" alt="">
                                                                                     </a>
                                                                             </div>
