remove the extra port number in the url

--- a/public_html/vs.html
+++ b/public_html/vs.html
@@ -37,7 +37,7 @@ THE SOFTWARE.
         <script src="js/oms.min.js"></script>
         
         <script>
-            var url = "https://acoustic.ifp.illinois.edu:8081";
+            var url = "https://acoustic.ifp.illinois.edu";
             //var url = "http://localhost:8383";
             var gLoc;
             var map;
