add alert for no data found to video and audio search

--- a/public_html/as.html
+++ b/public_html/as.html
@@ -66,6 +66,8 @@ THE SOFTWARE.
                         }, function(error){
                             console.log('audio decoding error');
                         });
+                    }, function(){
+                        alert("No data found!");
                     });
                 });
                 oms.addListener('spiderfy', function(markers) {
