--- a/public_html/vs.html
+++ b/public_html/vs.html
@@ -112,6 +112,8 @@ THE SOFTWARE.
                                 },onError);
                             },onError);
                         },onError);
+                    }, function(){
+                        alert("No data found!");
                     });
                 });
                 oms.addListener('spiderfy', function(markers) {
