--- a/public_html/as.html
+++ b/public_html/as.html
@@ -135,13 +135,13 @@ THE SOFTWARE.
                 
                 IllQueryCol('publicDb', 'publicUser', 'publicPwd', 'event', q, function(events){
                     events.sort(function(a, b) {
-                        return a.logNoiseProb - b.logNoiseProb;
+                        return -a.logProb + b.logProb;
                     });
                     for (var i = 0; i <events.length;i++){
                         // Create a marker for each event
                         var marker = new google.maps.Marker({
                             position:new google.maps.LatLng(parseFloat(events[i].location.coordinates[1]), parseFloat(events[i].location.coordinates[0])),
-                            desc:"logNoiseProb:"+events[i].logNoiseProb+" recordDate:"+events[i].recordDate.$date+" duration:"+events[i].duration,
+                            desc:"logProb:"+events[i].logProb+" recordDate:"+events[i].recordDate.$date+" duration:"+events[i].duration,
                             filename:events[i].filename,
                             icon:'https://chart.googleapis.com/chart?chst=d_map_pin_letter&chld='+ (i) +'|FF776B|000000'
                         });
